# demo-inference

./: CMakeLists.txt  README.md  main.cpp
c/: main_trt_inference.cpp  trt_inference.cpp  trt_inference.h  trt_inference2.cpp  trt_inference2.h  utils.h
python/: trt_inference.py  uav_bird.txt
